tests/errors/pointers_auto_const_uninitialized_errors.ctp

    
def (main:
    val : mut:int
    a : int:ptr = &val  # a is const (not what it's pointing to)
    a = nullptr  # error
)
    